// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-crMKhx gbJWQg"
>
  <div
    className="sc-dAoLme kKOjXi"
  >
    <div
      className="sc-dZldlu gkvqzO"
    >
      <div
        className="sc-fTppNL jYILqx"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-xIxFg btvwoc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fusXOv efcxlY"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-crMKhx jciGvX"
>
  <div
    className="sc-dAoLme kKOjXi"
  >
    <div
      className="sc-dZldlu gkvqzO"
    >
      <div
        className="sc-fTppNL jYILqx"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-xIxFg btvwoc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fusXOv efcxlY"
  >
    <span>
      <button
        className="sc-gvnOrV hdYNRN"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dNiKSF iQXIpM"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-gvnOrV ieJODu"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dNiKSF iQXIpM"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-crMKhx gbJWQg"
>
  <div
    className="sc-dAoLme irYbYD"
  >
    <div
      className="sc-xIxFg fxglvq"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-fusXOv efcxlY"
    >
      <button
        className="sc-gvnOrV fCvydW"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-dNiKSF iQXIpM"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-crMKhx fSsnVq"
>
  <div
    className="sc-dAoLme kKOjXi"
  >
    <div
      className="sc-dZldlu gkvqzO"
    >
      <div
        className="sc-fTppNL jYILqx"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-xIxFg btvwoc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fusXOv efcxlY"
  >
    <span>
      <button
        className="sc-gvnOrV hdYNRN"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dNiKSF iQXIpM"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-gvnOrV ieJODu"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dNiKSF iQXIpM"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-crMKhx fSsnVq"
  >
    <div
      className="sc-dAoLme kKOjXi"
    >
      <div
        className="sc-dZldlu gkvqzO"
      >
        <div
          className="sc-fTppNL jYILqx"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-xIxFg btvwoc"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-fusXOv efcxlY"
    >
      <span>
        <button
          className="sc-gvnOrV hdYNRN"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-dNiKSF iQXIpM"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-gvnOrV ieJODu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-dNiKSF iQXIpM"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-crMKhx gbJWQg"
>
  <div
    className="sc-dAoLme kKOjXi"
  >
    <div
      className="sc-dZldlu gkvqzO"
    >
      <div
        className="sc-fTppNL jYILqx"
      >
        Title here
      </div>
      <div
        className="sc-bTeyqo fQrpZg"
      >
        <svg
          className="sc-gwfuxq"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-xIxFg btvwoc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
